# Soft_Renderer

./: .gitignore  CMakeLists.txt  Readme.md
Assignment1/: Global.hpp  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
src/: Shader.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
